# mcm

./: .gitignore  description.txt  mcm.py  meta_package_config_schema.json  pyproject.toml  todo
mcm/: __init__.py  mcm.py
mcm/static/: meta_package_config_schema.json
packaging/fedora/: build.sh  mcm.spec
tests/: test_mcm.py
