[tool.poetry]
name = "mcm"
version = "0.0.1"
description = "Meta-configuration manager, for scm"
authors = ["Edd Salkield <edd@salkield.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
xdg = "^4.0.1"
toml = "^0.10.0"
argparse = "^1.4.0"
pathlib = "^1.0.1"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-datafiles = "^2.0"

[tool.poetry.scripts]
mcm = "mcm.mcm:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

