[tool.poetry]
name = "mcm"
version = "0.0.2"
description = "Meta-configuration manager, for scm"
authors = ["Edd Salkield <edd@salkield.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
jsonschema = "^3.2.0"
pyxdg = "^0.26"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-datafiles = "^2.0"

[tool.poetry.scripts]
mcm = "mcm.mcm:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

